test/tests/operators/to_google_secops/entity_reject_log_args.txt
error: `log_text` is only valid when `mode="raw_log"`
  --> tests/operators/to_google_secops/entity_reject_log_args.tql:20:62
   |
20 |   instance="INSTANCE", log_type="AZURE_AD_CONTEXT", log_text="raw",
   |                                                              ^^^^^ 
   |

error: `collection_time` is only valid when `mode="raw_log"`
  --> tests/operators/to_google_secops/entity_reject_log_args.tql:21:19
   |
21 |   collection_time=2026-01-01T00:00:01
   |                   ^^^^^^^^^^^^^^^^^^^ 
   |
